src/eww/dot-config/eww/eww.scss
$fg1: #e8e0cc;
$fg2: #859289;
$bg1: #2a353b;
$bg2: #323c41;
$red1: #e67e80;
$red2: #f85552;
$gre1: #a7c080;
$gre2: #8da101;
$yel1: #dbbc7f;
$yel2: #dfa000;
$blu1: #7fbbb3;
$blu2: #3a94c5;
$pur1: #d699b6;
$pur2: #df69ba;
$aqu1: #83c092;
$aqu2: #35a77c;

* {
  all: unset;
  font-family: Ellograph CF;
  font-weight: 600;
}

.bar {
  color: $fg1;
  background-color: $bg2;

  &.dt button {
    font-size: .9em;
    padding: .4em 0;
  }

  &.lt button {
    padding: .4em .8em;
  }
}

.section {
  $margin: .8em;

  &.start * {
    margin-right: $margin;
  }

  &.end * {
    margin-left: $margin;
  }
}

.desktop {
  & .focused {
    color: $bg2;
    background-color: $gre1;
  }

  & .occupied {
    color: $gre1;
  }

  & .empty {
    color: $fg2;
  }
}

.separator {
  color: $fg2;
  font-weight: 700;
}

.time {
  margin-right: .8em;
}

